# jsonb_ivm

./: .gitignore  .markdownlint-cli2.yaml  .markdownlint-md031-only.jsonc  .markdownlint.json  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  .trivyignore  ACHIEVEMENT_SUMMARY.md  A_PLUS_IMPLEMENTATION_COMPLETE.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  DEVELOPMENT.md  DOCUMENTATION_STRUCTURE.md  Dockerfile  IMPLEMENTATION_SUCCESS.md  LICENSE  PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION_REPORT.md  PHASE5_COMPLETION_REPORT.md  PHASE_4_SUMMARY.md  POC_IMPLEMENTATION_PLAN.md  POC_QUICKSTART.md  README.md  SECURITY.md  TESTING.md  achievement-summary.md  benchmark_after_depth_validation.txt  benchmark_results.txt  benchmark_results_full.txt  changelog.md  ci-cd-improvement-plan.md  clippy-analysis-summary.md  clippy-warnings.txt  code-review-prompt.md  contributing.md  development.md  documentation-cleanup-summary.md  (+8 more)
.cargo/: config.toml
.github/: dependabot.yml  markdown-link-check-config.json
.phases/: EXECUTION_SUMMARY.md  README.md  performance-optimizations.md
docs/: API.md  ARCHITECTURE.md  PERFORMANCE.md  PG_TVIEW_INTEGRATION_EXAMPLES.md  README.md  SECURITY-SUPPRESSIONS.md  api-reference.md  architecture.md  integration-guide.md  pg-tview-helpers-proposal.md  pg-tview-integration-examples.md  quick-start.md  troubleshooting.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_array_update.rs  fuzz_deep_merge.rs  fuzz_merge_shallow.rs
scripts/: install-hooks.sh  run_load_tests.sh  run_poc_benchmarks.sh  (+1 more)
(+92 files in other folders)
