[package]
name = "jsonb_ivm-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1.0"

[dependencies.jsonb_ivm]
path = ".."

[[bin]]
name = "fuzz_merge_shallow"
path = "fuzz_targets/fuzz_merge_shallow.rs"
test = false
doc = false

[[bin]]
name = "fuzz_array_update"
path = "fuzz_targets/fuzz_array_update.rs"
test = false
doc = false

[[bin]]
name = "fuzz_deep_merge"
path = "fuzz_targets/fuzz_deep_merge.rs"
test = false
doc = false
